--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header{
 }
 
 #articles article{
-    width: 32.1%;
+    width: 31%;
     height: 150px;
     background-color: rgb(0, 98, 255);
     text-align: center;
@@ -44,7 +44,7 @@ header{
 }
 
 #finales article{
-    width: 22.2%;
+    width: 22%;
     height: 150px;
     background-color: gray;
     text-align: center;
@@ -55,19 +55,11 @@ header{
 }
 
 /*Responsive*/
-/*desde 0px hasta 888px*/
-@media(max-width: 889px){
-    #articles article{
-        width: 40%;
-        background-color: red;
-    }  
-}
-@media(max-width: 645px){
-    aside{
-        float: none;
+
+@media(max-width: 768px){
+    .abc{
         width: 100%;
-        min-height: 40px;
-        line-height: 40px;
+        height: 100%;
     }
     #article{
         width: 100%;
@@ -75,5 +67,27 @@ header{
     #articles article{
         width: 90%;
         background-color: blue;
+    }
+    #finales article{
+        width: 40%;
+        background-color: gray;
+    }}
+
+@media(max-width: 320px){
+    .abc{
+        width: 100%;
+        height: 50px;
+    }
+    #article{
+        width: 100%;
+    }
+    #articles article{
+        width: 90%;
+        background-color: blue;
+        height: 100%;
+    }
+    #finales article{
+        width: 90%;
+        background-color: gray;
     }
 }
